--- a/user-service/src/main/resources/static/index.html
+++ b/user-service/src/main/resources/static/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 	<h1 class="title">Test</h1>
-	<script src="dist/main.js"></script>
+	<script src="js/main.js"></script>
 </body>
 </html>
