--- a/user-service/src/main/resources/static/index.html
+++ b/user-service/src/main/resources/static/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="dist/styles.css">
 </head>
 <body>
-	<h1 class="title">Test</h1>
-	<script src="dist/main.js"></script>
+	<div id="root"></div>
 </body>
+<script src="dist/main.js"></script>
 </html>
